crates/strider/tests/snapshots/v2__ppc32be__complex__multi_arg_call_in_branch.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x10000534:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "11" -> "5" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "12" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "5" -> "12" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "14" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "12" -> "14" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "14" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "17" -> "14" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "18" -> "14" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "19" -> "14" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "19" [label="φ f2", shape=house, fillcolor="#163030"];
  "12" -> "19" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v20" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v20" [color="#888888", style=dashed];
  "v20" -> "19" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v21" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v21" [color="#888888", style=dashed];
  "v21" -> "19" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "13" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" -> "13" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x10000534:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "13" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "13" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "8" -> "13" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "10" -> "13" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "11" -> "13" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "11" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="arg[3] ← r6", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="arg[2] ← r5", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "23" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "6" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "6" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "24" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0xffffffd8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "23" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "27" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "23" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "23" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "28" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "29" -> "27" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "10" -> "27" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "29" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "29" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "30" -> "29" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "28" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "31" -> "28" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "32" -> "28" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "9" -> "28" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "32" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0xfffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "31" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "34" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "31" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "8" -> "31" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "35" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0xffffffec:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "34" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "37" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "38" -> "34" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "34" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "38" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0xffffffe8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "37" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "40" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" -> "37" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "42" -> "37" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "42" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "41" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "40" [label="StackStore u32\n→ ram[sp + 4]", shape=box3d, fillcolor="#20182a"];
  "44" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "45" -> "40" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "46" -> "40" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "46" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "45" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "45" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "45" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "44" [label="StackStore u32\n→ ram[sp - 48]", shape=box3d, fillcolor="#20182a"];
  "48" -> "44" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "49" -> "44" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "25" -> "44" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "49" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "50" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="const 0xffffffd0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "48" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="φ f1", shape=house, fillcolor="#163030"];
  "12" -> "18" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v51" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v51" [color="#888888", style=dashed];
  "v51" -> "18" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v52" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v52" [color="#888888", style=dashed];
  "v52" -> "18" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "17" [label="φ r4", shape=house, fillcolor="#163030"];
  "12" -> "17" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v53" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v53" [color="#888888", style=dashed];
  "v53" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v54" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v54" [color="#888888", style=dashed];
  "v54" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "16" [label="φ r9", shape=house, fillcolor="#163030"];
  "12" -> "16" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "55" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "56" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "56" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v57" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v57" [color="#888888", style=dashed];
  "v57" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "58" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "58" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "55" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v59" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v59" [color="#888888", style=dashed];
  "v59" -> "55" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "60" -> "55" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "60" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="φ Mem", shape=house, fillcolor="#163030"];
  "12" -> "15" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "61" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "62" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "62" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "63" -> "62" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "64" -> "62" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "v57" -> "62" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "64" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "64" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "65" -> "64" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "65" [label="const 0xffffffdc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "63" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "13" -> "63" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "64" -> "63" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "v57" -> "63" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "61" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "66" -> "61" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "67" -> "61" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "v59" -> "61" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "67" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "67" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "68" -> "67" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "68" [label="const 0xffffffe0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "66" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "5" -> "66" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "67" -> "66" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "v59" -> "66" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "4" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "69" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "69" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "70" -> "69" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "71" -> "69" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "71" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "70" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "72" -> "70" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "73" -> "70" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "73" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "72" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "74" -> "72" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "75" -> "72" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "75" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "76" -> "75" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "77" -> "75" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "77" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "76" [label="init\nxer_so", shape=Mdiamond, fillcolor="#1a3a5c"];
  "74" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "78" -> "74" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "79" -> "74" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "79" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "80" -> "79" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "81" -> "79" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "81" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "80" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "82" -> "80" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "82" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "11" -> "82" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "83" -> "82" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "83" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "78" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "84" -> "78" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "85" -> "78" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "85" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "86" -> "85" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "87" -> "85" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "87" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "86" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "88" -> "86" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "88" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "89" -> "88" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "89" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" -> "88" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "84" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "90" -> "84" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "91" -> "84" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "91" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "90" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "92" -> "90" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "92" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "11" -> "92" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "93" -> "92" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "93" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
